# deku

./: .gitignore  Procfile  bcd.yml  docker-compose.yml  esy.json  flake.nix  package.json  sandbox.sh  start.sh  test_double_spend.sh  tutorial.md  tz1LYANwSGkEPVXicH3a9x35VqxTaCvW4koS.tzsidewallet
core/: state.re  state.rei  user_operation.re  user_operation.rei
docker/: static.Dockerfile
esy.lock/: index.json
go_interop/: interop.go
helpers/: named_pipe.re  named_pipe.rei
nix/: deku.nix
node/: building_blocks.re  flows.re  networking.re  state.re  state.rei
protocol/: block.re  block.rei  protocol.re  protocol_operation.re  protocol_operation.rei  protocol_state.re
src/node/: building_blocks.ml  flows.ml  networking.ml  server.ml  server.mli  (+7 more)
src/tezos_interop/: consensus.mligo  dune  fetch_big_map.js  run_entrypoint.js  tezos_interop.ml  tezos_interop.mli  webpack.config.js
state_transition/: state_transition.go
tests/: test_tezos_interop.re
tests/wasm/: dune  ex.ml  hexdump.ml  michelson_example.ml  simple_invocation.mligo.wasm  test_parsing.ml  test_runtime.ml  test_vm.ml  test_wasm.ml
tests/wasm/ligo_wasm_backend_output/: simple_invocation.mligo  simple_invocation.mligo.wat  ticket_join.mini_c.txt  ticket_join.mligo  ticket_join.mligo.wasm  ticket_join.mligo.wat  ticket_split.mini_c.txt  ticket_split.mligo  ticket_split.mligo.wasm  ticket_split.mligo.wat
tezos/: deku.re  deku.rei  michelson_v1_primitives.ml  michelson_v1_printer.ml  tezos.rei
tezos_interop/: consensus.mligo  dune  run_entrypoint.js  tezos_interop.re  tezos_interop.rei
(+12 files in other folders)
