(library
 (name tezos_interop)
 (libraries helpers lwt.unix tezos-micheline crypto tezos)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.eq ppx_blob ppx_let_binding))
 (preprocessor_deps
  (file ./run_entrypoint.bundle.js)
  (file ./fetch_storage.bundle.js)
  (file ./fetch_big_map.js)
  (file ./listen_transactions.bundle.js)))

(rule
 (deps
  ./webpack.config.js
  ./listen_transactions.js
  ./fetch_storage.js
  ./fetch_big_map.js
  ./run_entrypoint.js)
 (targets
  ./listen_transactions.bundle.js
  ./fetch_storage.bundle.js
  ./fetch_big_map.bundle.js
  ./run_entrypoint.bundle.js)
 (mode fallback)
 (action
  (run webpack --env=%{profile})))

(rule
 (deps ./webpack.config.js ./listen_transactions.js ./run_entrypoint.js)
 (alias fmt)
 (mode fallback)
 (action
  (run prettier -c %{deps})))
